# airbase

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mak_common.inc  mak_def.inc  setup.py  store_changes.cpp  version.txt
examples/: keyboardControl.cpp  keyboard_control.py  mobileAloha.cpp
linux-x86_64-release/include/boost/geometry/strategies/geographic/: area.hpp
linux-x86_64-release/include/json/: config.h
linux-x86_64-release/include/rpos/core/: diagnosis_info.h  laser_point.h
linux-x86_64-release/include/rpos/core/detail/: geometry_line.h  geometry_rectangle.h
linux-x86_64-release/include/rpos/features/: artifact_provider.h  impact_sensor_feature.h  location_provider.h  statistics_provider.h  system_resource.h
linux-x86_64-release/include/rpos/features/artifact_provider/: feature.h  rectangle_area.h
linux-x86_64-release/include/rpos/features/location_provider/: rectangle_area_map.h
linux-x86_64-release/include/rpos/features/statistics_provider/: feature.h
linux-x86_64-release/include/rpos/features/sweep_motion_planner/: sweep_region.h
linux-x86_64-release/include/rpos/features/system_resource/: device_info.h  laser_scan.h  power_management.h  system_parameters.h
linux-x86_64-release/include/rpos/message/: base_messages.h  depth_camera_messages.h  imu_messages.h  lidar_messages.h  message.h
linux-x86_64-release/include/rpos/message/diagnosis/: depth_cam_messages_serialization.h  device_pose_messages_serialization.h  imu_messages_serialization.h  lidar_messages_serialization.h  sensor_messages_serialization.h
linux-x86_64-release/include/rpos/robot_platforms/: slamware_agent_platform.h  slamware_error_code.h  slamware_sdp_exception.h  slamware_sdp_platform_config.h
linux-x86_64-release/include/rpos/robot_platforms/objects/: composite_map.h  composite_map_defs.h  composite_map_writer.h  diagnosis_subscribe_provider.h  grid_map_layer.h  polygon_area_map_layer.h  pose_map_layer.h  rectangle_area_map_layer.h  slamware_agent_objects.h  system_event_provider.h
linux-x86_64-release/include/rpos/system/: system.h  this_thread.h  types.h
linux-x86_64-release/include/rpos/system/config/: config_comparator.h  config_provider.h  core_objects_config_parser.h
linux-x86_64-release/include/rpos/system/crypto/: digest.h
linux-x86_64-release/include/rpos/system/diagnosis/: diagnosis_serialization.h  local_file_system_blob_store.h
linux-x86_64-release/include/rpos/system/encoding/: encoding_stream.h  i_encoder.h  rle_encoder.h  rle_file.h
linux-x86_64-release/include/rpos/system/io/: memory_read_stream.h  snapshot_loop_buffer_memory_write_stream.h
linux-x86_64-release/include/rpos/system/serialization/: buffer_stream_adaptor.h  core_objects_serialization.h  json_serialization.h
linux-x86_64-release/include/rpos/system/signal/: connection.h
linux-x86_64-release/include/rpos/system/util/: atomic_signal.h  io_utils.h  log.h  void_type.h
linux-x86_64-release/output/: hall.stcm  newmap.stcm  poses_data.json
samples/: Makefile
samples/dataCollect/: Makefile
samples/dataCollect/src/: main.cpp
samples/map2bmp/src/: bitmap_image.hpp  main.cpp
samples/mapdemo/src/: main.cpp
samples/mobileAloha/src/: main.cpp
samples/moveandpathdemo/src/: main.cpp
samples/stcm_parser/: Makefile
samples/stcm_parser/src/: main.cpp
samples/velocity_control/: Makefile
samples/velocity_control/src/: main.cpp
slamtec/include/boost/geometry/formulas/: vertex_latitude.hpp
slamtec/include/rpos/: rpos.h  rpos_version.h
slamtec/include/rpos/core/: angle_math.h  home_description.h  parameter.h  rpos_core_config.h  system_event.h
slamtec/include/rpos/core/detail/: geometry_matrix.h
slamtec/include/rpos/features/location_provider/: feature.h
slamtec/include/rpos/features/motion_planner/: feature.h
slamtec/include/rpos/features/system_resource/: feature.h  private_config.h
slamtec/include/rpos/message/: schedule_messages.h
slamtec/include/rpos/robot_platforms/: slamware_agent_platform.h  slamware_core_platform.h  slamware_http_error_code.h
slamtec/include/rpos/robot_platforms/objects/: slamware_firmware_service.h  slamware_scheduler_service.h
slamtec/include/rpos/system/: exception.h  thread_priority.h
slamtec/include/rpos/system/diagnosis/: i_blob_store.h  message_read_stream.h  message_write_stream.h  test_logging_store.h
slamtec/include/rpos/system/io/: memory_write_stream.h
slamtec/include/rpos/system/serialization/: core_objects_serialization.h
slamtec/include/rpos/system/util/: https_client.h  loop_buffer.h  time_util.h  udp_client.h  uom.h  uuid.h  waiter.h
src/: airbase.cpp  airbase.hpp  python_interface.cpp
